--- a/package.json
+++ b/package.json
@@ -5,20 +5,51 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "dotenv -c -- next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/avatar": "^2.0.30",
+    "@nextui-org/button": "^2.0.34",
+    "@nextui-org/card": "^2.0.31",
+    "@nextui-org/chip": "^2.0.30",
+    "@nextui-org/dropdown": "^2.1.26",
+    "@nextui-org/input": "^2.2.2",
+    "@nextui-org/modal": "^2.0.36",
+    "@nextui-org/navbar": "^2.0.33",
+    "@nextui-org/progress": "^2.0.31",
+    "@nextui-org/react": "^2.4.2",
+    "@nextui-org/skeleton": "^2.0.29",
+    "@solana/spl-token": "^0.4.7",
+    "@solana/wallet-adapter-base": "^0.9.23",
+    "@solana/wallet-adapter-react": "^0.15.35",
+    "@solana/wallet-adapter-react-ui": "^0.9.35",
+    "@solana/wallet-adapter-wallets": "^0.19.32",
+    "@solana/web3.js": "^1.94.0",
+    "bs58": "^6.0.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "dotenv-cli": "^7.4.2",
+    "framer-motion": "^11.2.13",
+    "lodash": "^4.17.21",
+    "next": "14.2.4",
+    "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.4"
+    "react-icons": "^5.2.1",
+    "react-toastify": "^10.0.5",
+    "swr": "^2.2.5",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7",
+    "zustand": "^4.5.4"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.39",
+    "tailwindcss": "^3.4.4",
+    "typescript": "^5"
   }
 }
