--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@nextui-org/chip": "^2.0.30",
     "@nextui-org/dropdown": "^2.1.26",
     "@nextui-org/input": "^2.2.2",
+    "@nextui-org/listbox": "^2.1.22",
     "@nextui-org/modal": "^2.0.36",
     "@nextui-org/navbar": "^2.0.33",
     "@nextui-org/progress": "^2.0.31",
@@ -26,12 +27,10 @@
     "@solana/wallet-adapter-react-ui": "^0.9.35",
     "@solana/wallet-adapter-wallets": "^0.19.32",
     "@solana/web3.js": "^1.94.0",
-    "bs58": "^6.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "dotenv-cli": "^7.4.2",
     "framer-motion": "^11.2.13",
-    "lodash": "^4.17.21",
     "next": "14.2.4",
     "next-themes": "^0.3.0",
     "react": "^18",
