--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,5 @@
-PORT=
+PORT=3001
+NEXT_PUBLIC_API_URL=http://127.0.0.1:3001
 NEXT_PUBLIC_SOLANA_ENDPOINT=
 ANYSWAP_API_ENDPOINT=
 MIXSWAP_API_ENDPOINT=
