--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 PORT=3001
 NEXT_PUBLIC_API_URL=http://127.0.0.1:3001
-NEXT_PUBLIC_SOLANA_ENDPOINT=
-ANYSWAP_API_ENDPOINT=
-MIXSWAP_API_ENDPOINT=
-MIXSWAP_REFERRAL=
+NEXT_PUBLIC_SOLANA_ENDPOINT=https://mainnet.helius-rpc.com/?api-key=1bfc5fc6-b81e-4b71-a4b6-1b6f73aa84d5
+ANYSWAP_API_ENDPOINT=http://127.0.0.1:8000/api
+MIXSWAP_API_ENDPOINT=https://api.route.mixin.one
+NEXT_PUBLIC_MIXSWAP_REFERRAL=Eyg91Sc3kWr1arHoLgRJEzqVyRncRKzA2tEWNwf62bxr
