--- a/.env.production
+++ b/.env.production
@@ -3,4 +3,4 @@ NEXT_PUBLIC_API_URL=http://127.0.0.1:3001
 NEXT_PUBLIC_SOLANA_ENDPOINT=
 ANYSWAP_API_ENDPOINT=
 MIXSWAP_API_ENDPOINT=
-MIXSWAP_REFERRAL=
+NEXT_PUBLIC_MIXSWAP_REFERRAL=
